--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ a:active {
       <a href="http://www.rutgers.edu/">Rutgers University</a><br />
 110 Frelinghuysen Road<br />
 Piscataway, NJ 08854, USA</td>
-<!--    <td width="356" rowspan="5"><div align="center"><img src="xiao_han192x246.jpg" width="192" height="246" alt="picture" /></div></td>
+<!--    <td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" width="192" height="246" alt="picture" /></div></td>
 -->  
 </tr>
   <tr>
