--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ a:active {
 &nbsp<br/>
 &nbsp<br/>
 
-<table width="550" border="0">
+<table width="750" border="0">
   <tr>
     <td valign="top"><strong>Address:</strong></td>
     <td><a href="http://stat.rutgers.edu/">Department of
@@ -56,7 +56,7 @@ a:active {
       <a href="http://www.rutgers.edu/">Rutgers University</a><br />
 110 Frelinghuysen Road<br />
 Piscataway, NJ 08854, USA</td>
-<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" width="192" height="246" alt="picture" /></div></td>  
+<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="220" alt="picture" /></div></td>  
 </tr>
   <tr>
     <td><strong>Office:</strong></td>
