--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@ a:active {
 <table width="750" border="0">
   <tr>
     <td valign="top"><strong>Address:</strong></td>
-    <td><a href="http://stat.rutgers.edu/">Department of
+    <td valign="top"><a href="http://stat.rutgers.edu/">Department of
     Statistics</a><br />
       <a href="http://www.rutgers.edu/">Rutgers University</a><br />
 110 Frelinghuysen Road<br />
 Piscataway, NJ 08854, USA</td>
-<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="220" alt="picture" /></div></td>  
+<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="200" alt="picture" /></div></td>  
 </tr>
   <tr>
     <td><strong>Office:</strong></td>
