--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@ a:active {
 Piscataway, NJ 08854, USA</td>
 <td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="150" alt="picture" /></div></td>  
 </tr>
+<tr>
+<td valign="top"><strong>Address:
+110 Frelinghuysen Road<br />
+Piscataway, NJ 08854, USA</td>
+</tr>
   <tr>
     <td><strong>Office:</strong></td>
     <td>Hill Center 451</td>
