--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@ a:active {
 Piscataway, NJ 08854, USA</td>
 <td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="150" alt="picture" /></div></td>  
 </tr>
+	
 <tr>
-<td valign="top"><strong>Address:
-110 Frelinghuysen Road<br />
+<td valign="top"><strong>Address:</strong></td>
+<td valign="top"> 110 Frelinghuysen Road<br />
 Piscataway, NJ 08854, USA</td>
 </tr>
   <tr>
