--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@ a:active {
 &nbsp<br/>
 &nbsp<br/>
 
-<table width="750" border="0">
+<table width="650" border="0">
   <tr>
-    <td valign="top"><strong>Address:</strong></td>
-    <td valign="top"><a href="http://stat.rutgers.edu/">Department of
-    Statistics</a><br />
-      <a href="http://www.rutgers.edu/">Rutgers University</a><br />
-110 Frelinghuysen Road<br />
-Piscataway, NJ 08854, USA</td>
-<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="150" alt="picture" /></div></td>  
+    <td valign="top"><strong>Position:</strong></td>
+    <td valign="top">Associate Professor<br/>
+	    Co-Graduate Director<br/>
+	    <a href="http://stat.rutgers.edu/">Department of Statistics</a><br />
+      <a href="http://www.rutgers.edu/">Rutgers University</a><br /></td>
+<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="180" alt="picture" /></div></td>  
 </tr>
 	
 <tr>
