--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ a:active {
 
 <body>
   <h1><strong>Han Xiao</strong></h1>
-  <strong>&nbspAssociate Professor</strong> and <strong>Co-Graduate Director</strong><br/>
-  &nbspDepartment of Statistics, Rutgers University
+  <!--<strong>&nbspAssociate Professor</strong> and <strong>Co-Graduate Director</strong><br/>
+  &nbspDepartment of Statistics, Rutgers University-->                 
 
 &nbsp<br/>
 &nbsp<br/>
 
-<table width="650" border="0">
+<table width="720" border="0">
   <tr>
     <td valign="top"><strong>Position:</strong></td>
     <td valign="top">Associate Professor<br/>
@@ -57,7 +57,7 @@ a:active {
       <a href="http://www.rutgers.edu/">Rutgers University</a><br /></td>
 <td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="180" alt="picture" /></div></td>  
 </tr>
-	
+<tr></tr>	
 <tr>
 <td valign="top"><strong>Address:</strong></td>
 <td valign="top"> 110 Frelinghuysen Road<br />
