--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ a:active {
 <tr></tr>	
 
 <tr>
-<td valign="top"><strong>Address:</strong></td>
-<td valign="top"> 110 Frelinghuysen Road<br />
+<td><strong>Address:</strong></td>
+<td> 110 Frelinghuysen Road<br />
 Piscataway, NJ 08854, USA</td>
 </tr>
   
