--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@ a:active {
 	    Co-Graduate Director<br/>
 	    <a href="http://stat.rutgers.edu/">Department of Statistics</a><br />
       <a href="http://www.rutgers.edu/">Rutgers University</a><br /></td>
-<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="180" alt="picture" /></div></td>  
+<td width="356" rowspan="5"><div align="center"><img src="hanxiao.jpg" height="168" alt="picture" /></div></td>  
 </tr>
 
 <tr></tr>	
 
 <tr>
-<td><strong>Address:</strong></td>
-<td> 110 Frelinghuysen Road<br />
+<td valign="top"><strong>Address:</strong></td>
+<td valign="top"> 110 Frelinghuysen Road<br />
 Piscataway, NJ 08854, USA</td>
 </tr>
   
