--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <LINK REL="SHORTCUT ICON" HREF="favicon.ico">
 -->
 
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Han Xiao's Homepage</title>
 <style type="text/css">
 .arxiv {
