--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<LINK REL="SHORTCUT ICON" HREF="mozart.jpg">
 <title>Han Xiao's Homepage</title>
 <style type="text/css">
 .arxiv {
