--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <LINK REL="SHORTCUT ICON" HREF="favicon.ico">
 -->
 
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <LINK REL="SHORTCUT ICON" HREF="mozart.jpg">
