--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a:active {
 	
 <tr>
     <td valign="top"><strong>Position:</strong></td>
-    <td valign="top">Associate Professor<br/>
+    <td valign="top">Professor<br/>
 	    Co-Graduate Director<br/>
 	    <a href="http://stat.rutgers.edu/">Department of Statistics</a><br />
       <a href="http://www.rutgers.edu/">Rutgers University</a><br /></td>
@@ -85,9 +85,9 @@ Piscataway, NJ 08854, USA</td>
 	
 </table>
 
-<h3><strong><a href="research.html">Research</a></strong></h3>
+<h3><strong><a href="https://statweb.rutgers.edu/hxiao/research.html">Research</a></strong></h3>
 
-<h3><strong><a href="teaching.html">Teaching</a></strong></h3>
+<h3><strong><a href="https://statweb.rutgers.edu/hxiao/teaching.html">Teaching</a></strong></h3>
 	
 <h4><strong><a href="misc.html">Misc</a></strong></h4>
 
