--- a/misc.html
+++ b/misc.html
@@ -44,16 +44,9 @@ a:active {
 
 <h2><strong>Miscellaneous:</strong></h2>
 <ul>
-  <li>Fall 2011
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="cyq_suitang.pdf">目錄</a></li>
+  <li>&nbsp&nbsp&nbsp<a href="cyq_suitang.pdf">目錄</a></li>
 
 </ul>
 
-
-<ol type="disc">
-
-</ol>
-<hr />
-<div align="right" class="arxiv"><em>Han Xiao, June 2023</em></div>
 </body>
 </html>
