--- a/misc.html
+++ b/misc.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <LINK REL="SHORTCUT ICON" HREF="favicon.ico">
-<title>Han Xiao - Teaching</title>
+<title>Han Xiao - Miscellaneous</title>
 <style type="text/css">
 .arxiv {
 	font-family: Verdana, Geneva, sans-serif;
