--- a/misc.html
+++ b/misc.html
@@ -42,7 +42,7 @@ a:active {
 
 <body>
 
-<! <h2><strong>Miscellaneous:</strong></h2> -->
+<!-- <h2><strong>Miscellaneous:</strong></h2> -->
 <ul>
   <li>&nbsp&nbsp&nbsp<a href="cyq_suitang.pdf">目錄</a></li>
 
