--- a/misc.html
+++ b/misc.html
@@ -44,7 +44,7 @@ a:active {
 
 <!-- <h2><strong>Miscellaneous:</strong></h2> -->
 <ul>
-  <li>&nbsp&nbsp&nbsp<a href="cyq_suitang.pdf">目錄</a></li>
+  <li>&nbsp&nbsp<a href="cyq_suitang.pdf">目錄</a></li>
 
 </ul>
 
