--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Piscataway, NJ 08854, USA</td>
 
 <h3><strong><a href="https://statweb.rutgers.edu/hxiao/teaching.html">Teaching</a></strong></h3>
 	
-<h3><strong><a href="software.html">Software</a></strong></h3>
+<!-- <h3><strong><a href="software.html">Software</a></strong></h3> >
 	
 <h4><strong><a href="misc.html">Misc</a></strong></h4>
 
