--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Piscataway, NJ 08854, USA</td>
 	
 <!-- <h3><strong><a href="software.html">Software</a></strong></h3> -->
 	
-<h4><strong><a href="misc.html">Misc</a></strong></h4>
+<h4><strong><a href="misce.html">Misc</a></strong></h4>
 
 
 <hr />
