--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a:active {
 
 
 <body>
-  <h1><strong>Han Xiao</strong></h1>
+  <h1><strong>Han Xiao (萧寒)</strong></h1>
   <!--<strong>&nbspAssociate Professor</strong> and <strong>Co-Graduate Director</strong><br/>
   &nbspDepartment of Statistics, Rutgers University-->                 
 
